removed plus sign

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>Hello World!</h1>
-+<p>My name is <b>ZAHRA</b>. It rhymes with <i>cara</i>.</p>
+<p>My name is <b>ZAHRA</b>. It rhymes with <i>cara</i>.</p>
